--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,6 +1,6 @@
 ---
-Name: arbitrary-python
-Cartridge-Short-Name: ARBITRARY_PYTHON
+Name: python
+Cartridge-Short-Name: PYTHON
 Display-Name: Python 2.6
 Description: 'Python is a general-purpose, high-level programming language whose design
   philosophy emphasizes code readability. Popular development frameworks include:
